Fixed compile error again2

--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -18,5 +18,9 @@
       <input type="submit" value="Search" class="button blue input-large" id="search-button">
 
     </form>
+
+  <body>
+  Reserve a Friend allows you to quickly find a new friend that can provide you with the help and expertise you need. Find an affordable solution to solving your problems with a friend, who is flexible to your needs. 
+  </body>
   </div>
 </div>
