--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -23,8 +23,8 @@
 #root-page-search-bar-container {
   position: absolute;
   min-width: 615px;
-  top: 250px;
-  right: 300px
+  top: 150px;
+  right: 200px
 }
 
 #root-page-search-bar-container > h1, h3 {
@@ -46,6 +46,18 @@
 #root-page-search-bar-container > h3 {
   font-family: 'Lato', sans-serif;
   color: black;
+  font-size: 20px;
+  padding-bottom: 15px;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  line-height: 1.75em;
+/*  text-shadow: 0px 0px 40px black;
+  -webkit-text-stroke: 0.2px #333; */
+}
+
+#root-page-search-bar-container > body {
+  font-family: 'Lato', sans-serif;
+  color: red;
   font-size: 20px;
   padding-bottom: 15px;
   font-weight: 300;
