Fixed the price

--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -12,8 +12,8 @@
                       class: "text-input input-large",
                          id: "root-input-city-name" %>
 <!-- COMMENT THIS ADD -->
-      <!--%= select_numerical_given_options(html_name: "space_filters[guest_count]",
-                                       plural_noun: "guests") %-->
+      <%= select_numerical_given_options(html_name: "space_filters[guest_count]",
+                                       plural_noun: "guests") %>
 
       <input type="submit" value="Search" class="button blue input-large" id="search-button">
 
