--- a/app/views/spaces/new/_new_space_form.html.erb
+++ b/app/views/spaces/new/_new_space_form.html.erb
@@ -43,6 +43,7 @@
 
   <label for="space-booking_rates">Daily Rental Rate</label>
     <%= tag "input", type: "number",
+                     name: "space[booking_rate_daily]",
               placeholder: "50",
                     class: "number-input input-long input-small"%><br>
 
