Added destroy and fixed readme

--- a/app/views/spaces/index/_space.html.erb
+++ b/app/views/spaces/index/_space.html.erb
@@ -23,5 +23,6 @@
       <%= space.booking_rate_daily %>
     </div>
     <div class="light-gray">per night</div>
+<%= link_to "Delete this listing", space, method: :delete%>
   </div>
 </li>
