added the what search

--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -84,8 +84,17 @@
   margin-left: 5px;
   width: 320px;
 }
+#root-input-title-name {
+  margin-left: 5px;
+  width: 320px;
+}
 
 #search-button {
   margin-right: 5px;
 }
 
+
+#root-input-title-name {
+  margin-left: 5px;
+  width: 320px;
+}
