--- a/app/views/header/_logo_search_bar.html.erb
+++ b/app/views/header/_logo_search_bar.html.erb
@@ -2,7 +2,7 @@
   <ul>
 
     <li>
-      <%= link_to "Reserve a Friend", root_url, method: :get, id: "site-logo" %>
+      <%= link_to "needknack", root_url, method: :get, id: "site-logo" %>
     </li>
 
     <li>
