--- a/app/views/header/_header_search_bar.html.erb
+++ b/app/views/header/_header_search_bar.html.erb
@@ -1,9 +1,12 @@
 <form action="<%= spaces_url %>" method="get">
 
+
+
     <%= tag "input", type: "text",
-              placeholder: "Where are you going? (Boston suggested)",
+              placeholder: "Where? (Boston suggested)",
                      name: "space_filters[city]",
                     class: "text-input input-medium",
                        id: "header-search-input" %><br>
+
 
 </form>
