--- a/app/views/spaces/index/_space.html.erb
+++ b/app/views/spaces/index/_space.html.erb
@@ -14,6 +14,7 @@
     <h4 class="light-gray">
       <%= Space.room_types[space.room_type] %> -
       <%= space.city %>
+      <%= space.knack %>
     </h4>
   </header>
 
