--- a/app/views/spaces/new/_new_space_form.html.erb
+++ b/app/views/spaces/new/_new_space_form.html.erb
@@ -8,6 +8,13 @@
                      class: "input-long input-small",
                         id: "space-title" %><br>
 
+  <label for="space-title">Space Title</label>
+     <%= tag "input", type: "text",
+               placeholder: "Awesome Flat Near Everything!",
+                      name: "space[knack]",
+                     class: "input-long input-small",
+                        id: "root-input-knack" %><br>
+
   <label for="space-street-address">Street Address</label>
     <%= tag "input", type: "text",
               placeholder: "1234 Streetplace Rd.",
