--- a/app/views/bookings/shared/_itinerary.html.erb
+++ b/app/views/bookings/shared/_itinerary.html.erb
@@ -9,16 +9,16 @@
         <td colspan="2"><%= @space.title %></td>
       </tr>
       <tr>
-        <td>Residence type</td>
-        <td><%= Space.residence_types[@space.residence_type] %></td>
+        <td>blah21</td>
+        <td></td>
       </tr>
       <tr>
-        <td>Room type</td>
-        <td><%= Space.room_types[@space.room_type] %></td>
+        <td>blah22</td>
+        <td></td>
       </tr>
       <tr>
-        <td>Bed type</td>
-        <td><%= Space.bed_types[@space.bed_type] %></td>
+        <td>blah23</td>
+        <td>></td>
       </tr>
       <tr>
         <td>Check in</td>
@@ -33,8 +33,8 @@
         <td><%= @booking.night_count %></td>
       </tr>
       <tr>
-        <td>Guests</td>
-        <td><%= @booking.guest_count %></td>
+        <td>blah24</td>
+        <td></td>
       </tr>
       <tr>
         <td>Booking Rate</td>
