--- a/app/views/header/_header_search_bar.html.erb
+++ b/app/views/header/_header_search_bar.html.erb
@@ -6,7 +6,15 @@
               placeholder: "Where? (Boston suggested)",
                      name: "space_filters[city]",
                     class: "text-input input-medium",
-                       id: "header-search-input" %><br>
+                       id: "header-search-input" %>
+    <%= tag "input", type: "text",
+              placeholder: "Where? (Boston suggested)",
+                     name: "space_filters[city]",
+                    class: "text-input input-medium",
+                       id: "header-search-input" %>
+           
+
+
 
 
 </form>
