--- a/app/views/header/_logged_in_dropdown.html.erb
+++ b/app/views/header/_logged_in_dropdown.html.erb
@@ -9,7 +9,7 @@
   </ul>
   <ul id="user-dropdown">
     <li><%= link_to "Profile", current_user, method: :get %></li>
-    <li><%= link_to "Trips", bookings_url, method: :get %></li>
+    <li><%= link_to "Knacks Reserved", bookings_url, method: :get %></li>
     <li><%= link_to "Log out", session_url, method: :delete  %></li>
   </ul>
 </li>
