--- a/app/views/spaces/index/_space_search_sidebar.html.erb
+++ b/app/views/spaces/index/_space_search_sidebar.html.erb
@@ -8,12 +8,6 @@ data-remote="true"
      <%= render "spaces/index/map" %>
     </div>
 
-  <h4 class="sidebar-section-header">Room Type</h4>
-    <div class="sidebar-section group">
-      <%= checkbox_group collection: Space.room_types,
-                           ul_class:   "checkbox-li",
-                          html_name:  "space_filters[room_types]" %>
-    </div>
 
   <h4 class="sidebar-section-header">Price Range</h4>
     <div class="sidebar-section group">
@@ -30,13 +24,17 @@ data-remote="true"
       </div>
     </div>
 
-  <h4 class="sidebar-section-header">Guest Count</h4>
+
+  <h4 class="sidebar-section-header">Languages</h4>
     <div class="sidebar-section group">
-      <%= select_numerical_given_options(label: "",
-                                     html_name: "space_filters[guest_count]",
-                                        limits: [1,16],
-                                   plural_noun: "guests") %><br>
+       <div class="sidebar-section group">
+      <%= checkbox_group collection: Space.languages_list,
+                         ul_class:   "checkbox-li",
+                         html_name:  "space_filters[languages]" %>
     </div>
+    </div>
+
+
 
 
   <h4 class="sidebar-section-header">Dates</h4>
@@ -54,11 +52,8 @@ data-remote="true"
                       class: "date-input input-small sidebar-full-width" %>
     </div>
 
-  <h4 class="sidebar-section-header">Amenities</h4>
+  <h4 class="sidebar-section-header">Features??</h4>
     <div class="sidebar-section group">
-      <%= checkbox_group collection: Space.amenities_list,
-                         ul_class:   "checkbox-li",
-                         html_name:  "space_filters[amenities]" %>
     </div>
 
   <input type="submit" class="button blue" value="Filter" id="space-index-sidebar-filter-button">
