--- a/app/views/spaces/show/_booking_sidebar.html.erb
+++ b/app/views/spaces/show/_booking_sidebar.html.erb
@@ -8,7 +8,7 @@
         <sup class="left">$</sup>
         <%= @space.booking_rate_daily %>
       </div>
-      <div class="light-gray">per night</div>
+      <div class="dark-gray">per hour</div>
     </div>
   </div>
 
@@ -26,13 +26,6 @@
         <input type="date" name="booking[end_date]" class="date-input input-small sidebar-full-width" input-small sidebar-half-width>
     </div>
 
-    <h4 class="sidebar-section-header">Guest count</h4>
-    <div class="sidebar-section group">
-      <%= select_numerical_given_options(html_name: "booking[guest_count]",
-                                            limits: [1, @space.accommodates],
-                                       plural_noun: "guests") %>
-    </div>
-
     <input type="hidden" name="booking[space_id]" value="<%= @space.id %>">
 
     <button type="submit" class="blue button" id="space-show-sidebar-book-button">Book it</button>
@@ -45,7 +38,7 @@
     <div class="sidebar-section group">
       <div id="owner-img"><%= link_to image_tag(@space.owner.photo_medium, class: "user-image-medium"), @space.owner, method: :get %></div>
 
-      <h3 id="space-show-owner-name"><%= "#{@space.owner.first_name}" %></h3>
+      <h3 id="space-show-owner-name"><%="#{@space.owner.first_name} "%><%="#{@space.owner.last_name}"%></h3>
     </div>
 
     <h4 class="sidebar-section-header sidebar-bottom"><h4>
