--- a/app/views/spaces/show/_description_tab.html.erb
+++ b/app/views/spaces/show/_description_tab.html.erb
@@ -4,16 +4,16 @@
   <table class="tab-data">
     <tbody>
       <tr>
-        <td class="table-row-title">Room type:</td>
-        <td class="table-row-data"><%= Space.room_types[@space.room_type] %></td>
+        <td class="table-row-title">blah1:</td>
+        <td class="table-row-data"></td>
       </tr>
       <tr>
-        <td class="table-row-title">Bed type:</td>
-        <td class="table-row-data"><%= Space.bed_types[@space.bed_type] %></td>
+        <td class="table-row-title">blah2:</td>
+        <td class="table-row-data"></td>
       </tr>
       <tr>
-        <td class="table-row-title">Accomodates:</td>
-        <td class="table-row-data"><%= @space.accommodates %></td>
+        <td class="table-row-title">blah3:</td>
+        <td class="table-row-data"></td>
       </tr>
     </tbody>
   </table>
