--- a/app/views/users/show/_user_box.html.erb
+++ b/app/views/users/show/_user_box.html.erb
@@ -2,6 +2,6 @@
 
   <div><%= link_to image_tag(@user.photo_medium, class: "user-image-medium centered", id: "user-image"), @user, method: :get %></div>
 
-  <h3 class="dark-gray centered" id="user-show-username"><%= "#{@user.first_name}" %></h3>
+  <h3 class="dark-gray centered" id="user-show-username"><%= "#{@user.first_name} " %><%= "#{@user.last_name}" %></h3>
 
 </nav>
