--- a/app/views/bookings/index/user.html.erb
+++ b/app/views/bookings/index/user.html.erb
@@ -1,6 +1,6 @@
 <section>
 
-  <h1 class="page-header">Your Trips</h1>
+  <h1 class="page-header">Reserved Knacks</h1>
 
   <table id="user-bookings-table">
 
