--- a/app/views/spaces/show/_booking_sidebar.html.erb
+++ b/app/views/spaces/show/_booking_sidebar.html.erb
@@ -28,7 +28,7 @@
 
     <input type="hidden" name="booking[space_id]" value="<%= @space.id %>">
 
-    <button type="submit" class="blue button" id="space-show-sidebar-book-button">Book it</button>
+    <button type="submit" class="blue button" id="space-show-sidebar-book-button">Reserve</button>
 
   </form>
 
