top search now works

--- a/app/views/header/_header_search_bar.html.erb
+++ b/app/views/header/_header_search_bar.html.erb
@@ -3,15 +3,19 @@
 
 
     <%= tag "input", type: "text",
-              placeholder: "Where? (Boston suggested)",
-                     name: "space_filters[city]",
+              placeholder: "What? (Guitar? Chef?)",
+                     name: "space_filters[title]",
                     class: "text-input input-medium",
                        id: "header-search-input" %>
+                        <input type="submit" style="position: absolute; left: -9999px"/>
+
+
     <%= tag "input", type: "text",
-              placeholder: "Where? (Boston suggested)",
+              placeholder: "Where? (Boston? Miami?)",
                      name: "space_filters[city]",
                     class: "text-input input-medium",
                        id: "header-search-input" %>
+                       <input type="submit" style="position: absolute; left: -9999px"/>
            
 
 
