--- a/app/views/spaces/index/_space.html.erb
+++ b/app/views/spaces/index/_space.html.erb
@@ -2,7 +2,6 @@
 
   <a href=<%= space_url(space.id) %> class="space-image-wrapper">
     <%= image_tag(space.photo_medium, class: "space-image space-image-small") %>
-    <span class="map-number"><%= space_counter + 1 %></span>
   </a>
 
   <!--%= link_to image_tag(space.owner_photo.url_small, class: "host-image user-image-thumb"), user_url(space.owner_id), method: :get %-->
@@ -22,9 +21,11 @@
       <%= space.booking_rate_daily %>
     </div>
     <div class="light-gray">per night</div>
-
-  <% if current_user == @user %>    
-  <%= link_to "Delete this listing", space, method: :delete%>
+</br></br>
+  <% if logged_in? && current_user == @user %>    
+  <%= link_to "Edit this Knack"%>
+</br></br>
+  <%= link_to "Delete this Knack", space, confirm:"Are you sure you want to delete this knack?",method: :delete%>
   <% end %>  
   </div>
 </li>
