--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -10,7 +10,7 @@
     </p>
   </section>
 
-  <%=link_to(image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), :controller => 'paypal_express', :action => 'checkout')%>
+  <%=link_to(image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"),express_checkout_path)%>
 
 
 <section class="group">
