--- a/app/views/bookings/shared/_itinerary.html.erb
+++ b/app/views/bookings/shared/_itinerary.html.erb
@@ -1,6 +1,6 @@
 <div class="group">
   <header class="group" id="itinerary-header">
-    <%= link_to image_tag(@space.photo_medium, class: "image-medium"), @space, method: :get %>
+    <!--%= link_to image_tag(@space.photo_medium, class: "image-medium"), @space, method: :get %-->
   </header>
 
   <section>
@@ -30,7 +30,7 @@
       </tr>
       <tr>
         <td>Nights</td>
-        <td><%= @booking.night_count %></td>
+        <td><!--%= @booking.night_count %--></td>
       </tr>
       <tr>
         <td>blah24</td>
