--- a/app/views/spaces/new/_new_space_form.html.erb
+++ b/app/views/spaces/new/_new_space_form.html.erb
@@ -52,6 +52,6 @@
           </li>
         <% end %>
       </ul><br>
-
+<!-- TODO ADD CONFIRMATION PAGE OR PREVIEW PRIOR SUBMITTING KNACK -->
   <input type="submit" class="button blue input-large label-offset-button" value="Submit Knack">
 </form>
