--- a/app/views/bookings/index/_booking_visitor.html.erb
+++ b/app/views/bookings/index/_booking_visitor.html.erb
@@ -17,20 +17,28 @@
   <% statuses =       Booking.approval_statuses %>
   <% booking_status = booking.approval_status %>
     <% if booking_status == statuses[:approved] %>
+          <td><b>APPROVED</b></td>
     <td>
-      <b>APPROVED</b>
       <%= button_to "Cancel", cancel_by_owner_booking_url(booking.id), method: :put %>
     </td>
+<td>
+  <!-- TODO CHARGE PAYMENT HERE AFTER COMPLETE STATUS -->
+          <%= button_to "Complete Knack", complete_booking_url(booking.id), method: :put %>
+        </td>
     <% elsif booking_status == statuses[:pending] %>
     <td>
       <%= button_to "Approve", approve_booking_url(booking.id), method: :put %>
     </td>
+    <!-- TODO MESSAGE USER -->
+    <!-- TODO EDIT BOOKING -->
     <td>
       <%= button_to "Decline", decline_booking_url(booking.id), method: :put %>
     </td>
+    <!-- TODO GIVE REASON OR DEFAULT REASON FOR DECLINE -->
     <% else %>
-      <h3>development placeholder</h3>
-      <p>Status: <%= statuses[booking_status] %></p>
+
+     <td> <b><%= statuses[booking_status].upcase %></b>
+    </td>
     <% end %>
 
     </table>
