--- a/app/views/bookings/index/user.html.erb
+++ b/app/views/bookings/index/user.html.erb
@@ -7,13 +7,15 @@
     <th>Status</th><th>Location</th><th>Host</th><th>Dates</th><th>Info</th><th>Options</th>
     <%= render partial:"bookings/index/booking_space",
                collection: @user.initiated_bookings %>
-
        <% Space.all.each do |space| %>
          <%= render partial:"bookings/index/booking_visitor",
              collection: space.initiated_approve %>
-
          <%= render partial:"bookings/index/booking_visitor",
              collection: space.initiated_pending %>
+        <%= render partial:"bookings/index/booking_visitor",
+             collection: space.initiated_decline %>
+        <%= render partial:"bookings/index/booking_visitor",
+             collection: space.initiated_complete %>
         <% end %>
 
   
