--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -12,6 +12,7 @@
 
   <%= link_to "Checkout", new_order_path %>
 </p>
+<!-- TODO CHANGE PAYMENT TO ONLY CHARGE AFTER KNACKER SELECT COMPLETE FOR STATUS -->
 <p>
   <%= link_to image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), pay_path %>
 </p>
