--- a/app/views/messages/new.erb
+++ b/app/views/messages/new.erb
@@ -2,9 +2,7 @@ Send a message to
  
  <%= @user.full_name %>
  <%= form_tag({controller: "messages", action: "create"}, method: :post) do %>
-  <%= label_tag :subject %>
-  <%= text_field_tag :subject %>
-  <%= label :body, "Message text" %>
+  <h3><%= label :body, "Message text" %></h3>
   <%= text_area_tag :body %>
   <%= hidden_field_tag(:user, "#{@user.id}") %>
   <%= submit_tag 'Send message', class: "btn btn-primary" %>
