--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -1,221 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>NeedKnack</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.javascript/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="assets/NK_Square_Logo.png" height="30" width="30">   <span class="light">needknack</span>
-                </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#howitworks">How it works</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#featured">Featured</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contactus">Contact Us</a>
-                    </li>
-                    <%= yield %>
-                     <li>
-
-                            <%= link_to "LOG IN", new_session_url, id: "log-in-header", method: :get %>
-                    </li>
-                    <li><%= link_to "SIGN UP", new_user_url, id: "sign-up-header", method: :get %></li>
-                        <li><%= link_to "POST YOUR KNACK", new_space_url, method: :get, class: "button yellow-orange input-medium", id: "header-button"%></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-    <!-- Intro Header -->
-    <header class="intro">
-      <div class="intro-body">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-              <h1 class="brand-heading"> Find a knack wherever you go.</h1>
-              <!--form role="search"-->
-
-
-                <form action="<%= spaces_url %>" class="group" id="root-page-search-bar" method="get">
-         
-                  <div class="form-group">
-                    <%= tag "input", type: "text",
-                              placeholder: "What knack are you looking for?",
-                                     name: "space_filters[title]",
-                                    class: "form-control",
-                                       id: "exampleInputEmail1" %>
-                  </div>
-                  <div class="form-group">
-                    <%= tag "input", type: "text",
-                              placeholder: "Where? (Boston,MA)",
-                                     name: "space_filters[city]",
-                                    class: "form-control",
-                                       id: "exampleInputEmail1" %>
-                  </div>
-
-
-
-                       <input type="submit" value="Search" class="btn btn-default" id="search-button">
-
-                   
-                   </form>
-                   <!--
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                       <br><br><br><br>
-  Knack noun \nak\</br>
-  an ability, talent, or special skill needed to do something.
-  </body>
-</div></div>
--->
-                   </a>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </header>
-
-    <!-- About Section -->
-    <section id="howitworks" class="container content-section text-center">
- <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>1<br>Choose a Knack</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>2<br>Find a Knacker</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>3<br>Learn your Knack</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Download Section -->
-    <section id="featured" class="content-section text-center">
-            <div class="container">
-                <div class="download">
-<div class="featurette">
-    <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
-    <h2 class="featurette-heading">Featured Knacker <span class="text-muted">Brian Le</span></h2>
-    <p class="lead">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-  </div>
-</div>
-            </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contactus" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact the NeedKnack team</h2>
-                <p>Feel free to ask any questions, or give us any feedback.</p>
-                <p><a href="mailto:Blah@gmail.com">customercare@needknack.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <!-- Map Section -->
-    <div id="map"></div>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
-        </div>
-    </footer>
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="javascript/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="javascript/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="javascript/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="javascript/grayscale.js"></script>
-
-</body>
-
-</html>
-
-
 <div id="splash-container">
   <!--img src="<!%= Space.random_space_with_photo.url %>" id="splash"-->
 
+  <div class="group" id="root-page-search-bar-container">
+    <h1><%= link_to "How Does it work?", pages_howitworks_path, method: :get, id: ".howitworks" %></h1>
+    <h3>Find a knack wherever you go.</h3>
+    <form action="<%= spaces_url %>" class="group" id="root-page-search-bar" method="get">
+
+      <%= tag "input", type: "text",
+                placeholder: "What? ()",
+                       name: "space_filters[title]",
+                      class: "text-input input-large",
+                         id: "root-input-title-name" %>
+      <%= tag "input", type: "text",
+                placeholder: "Where? (Boston,MA)",
+                       name: "space_filters[city]",
+                      class: "text-input input-large",
+                         id: "root-input-city-name" %>
+ 
 
 
+      <input type="submit" value="Search" class="button blue input-large" id="search-button">
+
+    </form>
+
+  <body><br><br><br><br><br><br><br>
+  Knack noun \nak\</br>
+  an ability, talent, or special skill needed to do something.
+  </body>
+  </div>
 </div>
