--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -1,6 +1,7 @@
 <header id="space-show-header">
   <h2 id="space-show-title"> <%= best_in_place @space, :title %></h2>
-
+<!-- TODO MOVE RATINGS -->
+<!-- TODO ALLOW RATINGS TO ONLY OCCUR WHEN KNACK IS COMPLETE BY NEEDER -->
 Rating:<br>
 <%= rating_for @space, "rating", :star => 5 %>
 
