--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
   </h3>
 
   <section class="tab-box-wrapper group">
+  	<!-- TODO MOVE ADD COMMENT AFTER STATUS = COMPLETE -->
     <%= link_to 'Add Comment', new_comment_path(:user => @user) %>
   <section class="tab-box-wrapper group">
 
