--- a/app/views/bookings/index/_booking_space.html.erb
+++ b/app/views/bookings/index/_booking_space.html.erb
@@ -3,20 +3,12 @@
   <% booking_status = booking.approval_status %>
 <tr class="list-item">
   <td>
-   <% Space.all.each do |space| %>
-   <% if logged_in? && current_user == booking_space.space.owner %>  
-   <% if booking_status == statuses[:approved] %>
-   <%= button_to "Cancel", cancel_by_owner_booking_url(booking.id), method: :put %>
-   <% elsif booking_status == statuses[:pending] %>
-   <%= button_to "Approve", approve_booking_url(booking.id), method: :put %>
-   <%= button_to "Decline", decline_booking_url(booking.id), method: :put %>
-   <% else %>
-   <h3>development placeholder</h3>
-   <p>Status: <%= statuses[booking_status] %></p>
-   <% end %>
-   <% end %>
-   <% end %>
-    <%= statuses[booking_space.approval_status] %>
+    <%= statuses[booking_space.approval_status].upcase %>
+    <% @comment_by_sender = Comment.find_by_user_id_and_sender_id(booking_space.space.owner.id,current_user.id) %>
+    <% @comment_by_receiver = Comment.find_by_sender_id(current_user.id) %>
+    <% if booking_status == statuses[:completed] && @comment_by_sender.nil? %>
+   <br> <%= link_to 'Write a review', new_comment_path(:user => booking_space.space.owner.id) %>
+<% end %>
   </td>
   <td>
     <%= link_to "#{booking_space.space.title}, #{booking_space.space.city}",
