--- a/app/views/messages/new.erb
+++ b/app/views/messages/new.erb
@@ -6,4 +6,12 @@ Send a message to
   <%= text_area_tag :body %>
   <%= hidden_field_tag(:user, "#{@user.id}") %>
   <%= submit_tag 'Send message', class: "btn btn-primary" %>
+  <%= debug @ongoing_conversation %>
+  <%= debug @receipt %>
+  lll
+  <%= debug @notification %>
+  <%= debug @test %>
+  <%= debug @convo %>
+  sdsd
+  <%= debug @real %>
  <% end %>
