--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,6 +19,18 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %></div>
 
+  <div class="field">
+  <%= f.label :description %>
+  <br/>
+  <%= f.text_field :description %>
+  </div>
+  <div class="field">
+
+  </div>
+
+  <%= f.file_field :avatar %>
+
+
   <div><%= f.submit "Update" %></div>
 <% end %>
 
